@@ -1,3 +1,7 @@
+2004-06-23  Sam Steingold  <sds@gnu.org>
+
+	* genclisph.d (main): undef PACKAGE_* to avoid some warnings
+
 2004-06-06  Bruno Haible  <bruno@clisp.org>
 
 	* clos-method2.lisp (compute-effective-method-as-function): Convert
